--- a/app/src/main/res/layout/activity_schedule_match_details.xml
+++ b/app/src/main/res/layout/activity_schedule_match_details.xml
@@ -72,7 +72,7 @@
                             android:layout_marginTop="@dimen/_5sdp"
                             android:layout_marginEnd="@dimen/_3sdp"
                             android:background="@drawable/circle_camera"
-                            android:visibility="visible">
+                            android:visibility="gone">
 
                             <TextView
                                 android:id="@+id/tvPlayerFirstCount"
@@ -126,7 +126,7 @@
                                 android:textSize="@dimen/_10sdp" />
 
                             <TextView
-                                android:id="@+id/tvNoOfSquad"
+                                android:id="@+id/tvNoOfSquad1"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_marginStart="@dimen/_5sdp"
@@ -154,11 +154,11 @@
                         android:layout_height="@dimen/_25sdp"
                         android:layout_gravity="center"
                         android:background="@drawable/circle_camera"
-                        android:backgroundTint="@color/smokewhite"
+                        android:backgroundTint="@color/purple_700"
                         android:fontFamily="@font/opensans_bold"
                         android:gravity="center"
                         android:text="vs"
-                        android:textColor="@color/black"
+                        android:textColor="@color/white"
                         android:textSize="@dimen/_12sdp">
 
                     </TextView>
@@ -198,7 +198,7 @@
                             android:layout_marginTop="@dimen/_5sdp"
                             android:layout_marginEnd="@dimen/_3sdp"
                             android:background="@drawable/circle_camera"
-                            android:visibility="visible">
+                            android:visibility="gone">
 
                             <TextView
                                 android:id="@+id/tvPlayerSecondCount"
