--- a/app/src/main/res/layout/bottom_startscoring_dialog_select_palyer.xml
+++ b/app/src/main/res/layout/bottom_startscoring_dialog_select_palyer.xml
@@ -7,6 +7,67 @@
     android:background="@color/white"
     android:orientation="vertical">
 
+    <!-- Player Info Section -->
+
+    <LinearLayout
+        android:id="@+id/playerSection"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:orientation="horizontal">
+
+        <!-- Batsman 1 -->
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:orientation="vertical"
+            android:background="@drawable/add_post_background_left"
+            android:gravity="center"
+            android:padding="10dp">
+
+            <TextView
+                android:id="@+id/player1Name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Aditya"
+                android:textColor="#FDBA21"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/player1Score"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="4(3)"
+                android:textColor="#FFF" />
+        </LinearLayout>
+
+        <!-- Batsman 2 -->
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:orientation="vertical"
+            android:background="@drawable/add_post_background_left"
+            android:gravity="center"
+            android:padding="10dp">
+
+            <TextView
+                android:id="@+id/player2Name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Achintya"
+                android:textColor="#AAA"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/player2Score"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="13(3)"
+                android:textColor="#FFF" />
+        </LinearLayout>
+    </LinearLayout>
     <View
         android:layout_width="match_parent"
         android:layout_height="@dimen/_2sdp"
@@ -672,7 +733,20 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="horizontal">
-
+                    <TextView
+                        android:id="@+id/tv_fiveSeven"
+                        android:layout_width="0dp"
+                        android:layout_height="@dimen/_50sdp"
+                        android:layout_centerVertical="true"
+                        android:layout_gravity="center"
+                        android:layout_weight="2"
+                        android:background="@drawable/add_post_background_left"
+                        android:gravity="center"
+                        android:padding="@dimen/_10sdp"
+                        android:text="5,7"
+                        android:textColor="@color/verified_user_color"
+                        android:textSize="@dimen/_12sdp"
+                        app:fontFamily="@font/opensans_semibold" />
                     <TextView
                         android:id="@+id/tv_NB"
                         android:layout_width="0dp"
