--- a/app/src/main/res/layout/schedule_tournament_child.xml
+++ b/app/src/main/res/layout/schedule_tournament_child.xml
@@ -114,6 +114,7 @@
                                 style="@style/Widget.MaterialComponents.Button"
                                 android:layout_width="@dimen/_52sdp"
                                 android:layout_height="@dimen/_30sdp"
+                                android:visibility="gone"
                                 android:layout_gravity="center_horizontal"
                                 android:backgroundTint="@color/purple_500"
                                 android:drawableLeft="@drawable/add_black_24dp"
@@ -218,6 +219,7 @@
                                 style="@style/Widget.MaterialComponents.Button"
                                 android:layout_width="@dimen/_52sdp"
                                 android:layout_height="@dimen/_30sdp"
+                                android:visibility="gone"
                                 android:layout_gravity="center_horizontal"
                                 android:backgroundTint="@color/purple_500"
                                 android:drawableLeft="@drawable/add_black_24dp"
@@ -248,6 +250,7 @@
                     android:layout_centerHorizontal="true"
                     android:gravity="center_horizontal"
                     android:text="Tournament Name"
+                    android:visibility="gone"
                     android:textColor="@color/black"
                     android:textSize="@dimen/_12sdp"
                     app:fontFamily="@font/opensans_semibold" />
@@ -283,6 +286,7 @@
                     android:layout_alignParentStart="true"
                     android:layout_marginStart="@dimen/_10sdp"
                     android:layout_marginTop="@dimen/_5sdp"
+                    android:layout_marginBottom="@dimen/_10sdp"
                     android:layout_marginEnd="@dimen/_10sdp"
                     android:drawableLeft="@drawable/event_black_24dp"
                     android:drawablePadding="@dimen/_5sdp"
@@ -301,6 +305,7 @@
                     android:layout_marginStart="@dimen/_10sdp"
                     android:layout_marginTop="@dimen/_5sdp"
                     android:layout_marginEnd="@dimen/_10sdp"
+                    android:visibility="gone"
                     android:layout_marginBottom="@dimen/_10sdp"
                     android:drawableLeft="@drawable/access_time_black_24dp"
                     android:drawablePadding="@dimen/_5sdp"
@@ -317,6 +322,7 @@
                     android:layout_height="@dimen/_30sdp"
                     android:layout_alignParentEnd="true"
                     android:layout_centerVertical="true"
+                    android:visibility="gone"
                     android:layout_gravity="center_horizontal"
                     android:layout_marginEnd="@dimen/_10sdp"
                     android:backgroundTint="@color/purple_500"
