--- a/app/src/main/res/values/style.xml
+++ b/app/src/main/res/values/style.xml
@@ -1,16 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-
-
     <style name="ErrorTextAppearance" parent="TextAppearance.AppCompat">
         <item name="android:textColor">@color/purple_700</item>
         <item name="android:textSize">@dimen/_10sdp</item>
         <item name="android:fontFamily">@font/opensans_semibold</item>
     </style>
-
-
-
 
     <style name="HintTextAppearance" parent="TextAppearance.AppCompat">
         <item name="android:textColor">@color/white</item>
@@ -31,5 +26,38 @@
         <item name="android:textAllCaps">true</item>
     </style>
 
+    <style name="ScoreButtonStyle">
+        <item name="android:layout_width">0dp</item>
+        <item name="android:layout_height">90dp</item>
+        <item name="android:layout_rowWeight">1</item>
+        <item name="android:layout_columnWeight">1</item>
+        <item name="android:background">@drawable/item_border</item>
+        <item name="android:backgroundTint">@null</item>
+        <item name="android:textColor">#696969</item>
+        <item name="android:textSize">18sp</item>
+    </style>
+
+    <style name="ScoreButtonStyleGray">
+        <item name="android:layout_width">0dp</item>
+        <item name="android:layout_height">90dp</item>
+        <item name="android:layout_rowWeight">1</item>
+        <item name="android:layout_columnWeight">1</item>
+        <item name="android:background">@drawable/item_border_gray</item>
+        <item name="android:backgroundTint">@null</item>
+        <item name="android:textColor">#696969</item>
+        <item name="android:textSize">18sp</item>
+    </style>
+    <!-- Button Style for No Ball Options -->
+    <style name="NoBallButtonStyle">
+        <item name="android:layout_width">100dp</item>
+        <item name="android:layout_height">50dp</item>
+        <!--        //<item name="android:margin">4dp</item>-->
+    </style>
+
+    <style name="LegByeButtonStyle">
+        <item name="android:layout_width">80dp</item>
+        <item name="android:layout_height">50dp</item>
+        <!-- <item name="android:margin">8dp</item>-->
+    </style>
 
 </resources>
