--- a/app/src/main/res/values/style.xml
+++ b/app/src/main/res/values/style.xml
@@ -60,4 +60,13 @@
         <!-- <item name="android:margin">8dp</item>-->
     </style>
 
+    <style name="BallIndicatorStyle">
+        <item name="android:layout_width">40dp</item>
+        <item name="android:layout_height">40dp</item>
+        <item name="android:gravity">center</item>
+        <item name="android:textColor">#FFFFFF</item>
+        <item name="android:background">@drawable/circle_background</item>
+        <item name="android:layout_margin">8dp</item>
+    </style>
+
 </resources>
