--- a/app/src/main/res/layout/your_player_list_child.xml
+++ b/app/src/main/res/layout/your_player_list_child.xml
@@ -14,6 +14,7 @@
 
 
     <RelativeLayout
+        android:id="@+id/rl"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="@dimen/_5sdp">
@@ -119,8 +120,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentEnd="true"
+            android:enabled="false"
             android:layout_centerVertical="true"
-            android:visibility="visible">
+            android:visibility="gone">
 
         </CheckBox>
 
