--- a/app/src/main/res/layout/your_team_list_child.xml
+++ b/app/src/main/res/layout/your_team_list_child.xml
@@ -15,6 +15,7 @@
 
 
     <RelativeLayout
+        android:id="@+id/rl"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="@dimen/_5sdp">
