--- a/app/src/main/res/layout/bottom_dialog_stop_scoring_of_match.xml
+++ b/app/src/main/res/layout/bottom_dialog_stop_scoring_of_match.xml
@@ -311,6 +311,7 @@
                 android:layout_marginTop="@dimen/_20sdp"
                 android:fontFamily="@font/opensans_bold"
                 android:text="Need Help?"
+                android:visibility="gone"
                 android:textColor="@color/black"
                 android:textSize="@dimen/_14sdp">
 
@@ -321,6 +322,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
+                android:visibility="gone"
                 android:weightSum="2">
 
                 <com.google.android.material.card.MaterialCardView
