--- a/app/src/main/res/layout/bottom_dialog_resume_scoring_area.xml
+++ b/app/src/main/res/layout/bottom_dialog_resume_scoring_area.xml
@@ -48,6 +48,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/_10sdp"
             android:textSize="@dimen/_12sdp"
+            android:visibility="gone"
             android:textColor="@color/black"
             android:fontFamily="@font/opensans_semibold"
             android:text="@string/start_streaming"></RadioButton>
@@ -57,6 +58,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="@dimen/_12sdp"
+            android:visibility="gone"
             android:textColor="@color/black"
             android:fontFamily="@font/opensans_semibold"
             android:layout_marginTop="@dimen/_10sdp"
