--- a/app/src/main/res/layout/tournament_child.xml
+++ b/app/src/main/res/layout/tournament_child.xml
@@ -50,7 +50,7 @@
                     android:text="@string/add_team"
                     android:fontFamily="@font/opensans_bold"
                     android:textSize="@dimen/_8sdp"
-                    android:visibility="visible"
+                    android:visibility="gone"
                     android:backgroundTint="@color/purple_500"
                     />
 
