--- a/app/src/main/res/layout/activity_tournament_details.xml
+++ b/app/src/main/res/layout/activity_tournament_details.xml
@@ -624,6 +624,7 @@
             android:layout_alignParentBottom="true"
             android:background="@color/purple_700"
             android:padding="@dimen/_10sdp"
+            android:visibility="gone"
             android:orientation="horizontal">
 
             <TextView
