--- a/app/src/main/res/layout/item_player.xml
+++ b/app/src/main/res/layout/item_player.xml
@@ -1,32 +1,167 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
+xmlns:app="http://schemas.android.com/apk/res-auto"
+xmlns:tools="http://schemas.android.com/tools"
+android:layout_width="match_parent"
+android:layout_height="wrap_content"
+android:layout_marginTop="@dimen/_2sdp"
+android:layout_marginBottom="@dimen/_2sdp"
+app:cardBackgroundColor="@color/white"
+app:cardCornerRadius="@dimen/_5sdp"
+app:cardElevation="@dimen/_2sdp"
+app:cardUseCompatPadding="true"
+tools:ignore="NamespaceTypo">
+
+
+<RelativeLayout
+    android:id="@+id/rl"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="horizontal"
-    android:padding="10dp"
-    android:gravity="center_vertical"
-    android:background="?android:attr/selectableItemBackground"
-    android:clickable="true"
-    android:focusable="true">
+    android:padding="@dimen/_5sdp">
 
-    <!-- Checkbox to allow multiple selections -->
-    <CheckBox
-        android:id="@+id/cbPlayer"
-        android:layout_width="wrap_content"
+
+    <RelativeLayout
+        android:id="@+id/rl_profile"
+        android:layout_width="@dimen/_40sdp"
+        android:layout_height="@dimen/_40sdp"
+        android:layout_centerVertical="true">
+
+        <de.hdodenhof.circleimageview.CircleImageView
+            android:id="@+id/image"
+            android:layout_width="@dimen/_45sdp"
+            android:layout_height="@dimen/_45sdp"
+            android:src="@drawable/placeholder_user"
+            app:civ_border_width="@dimen/_4sdp"
+            tools:ignore="ImageContrastCheck" />
+
+    </RelativeLayout>
+
+
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="10dp"
-        android:checked="false"
-        android:focusable="false"
-        android:focusableInTouchMode="false"/>
+        android:layout_marginStart="@dimen/_10sdp"
+        android:layout_toLeftOf="@+id/cb"
+        android:layout_toRightOf="@+id/rl_profile"
+        android:orientation="vertical">
 
-    <!-- Player Name -->
+
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/_3sdp"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/tvtLocation"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentStart="true"
+                android:visibility="gone"
+                android:layout_gravity="center_vertical"
+                android:drawableLeft="@drawable/call_black_18dp"
+                android:drawablePadding="@dimen/_2sdp"
+                android:text="8799736451"
+                android:textColor="@color/black"
+                android:textSize="@dimen/_8sdp"
+                app:fontFamily="@font/opensans_regular" />
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentEnd="true"
+                android:orientation="vertical"
+                android:visibility="gone">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical"
+                    android:text="Assigned role:-"
+                    android:textColor="@color/black"
+                    android:textSize="@dimen/_8sdp"
+                    app:fontFamily="@font/opensans_regular" />
+
+                <TextView
+                    android:id="@+id/tvtRole"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="end"
+                    android:gravity="end"
+                    android:text="Captain"
+                    android:textColor="@color/purple_700"
+                    android:textSize="@dimen/_8sdp"
+                    app:fontFamily="@font/opensans_regular" />
+
+            </LinearLayout>
+        </RelativeLayout>
+
+    </LinearLayout>
+
     <TextView
         android:id="@+id/tvPlayerName"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:layout_centerVertical="true"
+        android:layout_marginEnd="@dimen/_2sdp"
+        android:paddingStart="@dimen/_2sdp"
+        android:layout_marginStart="@dimen/_5sdp"
+        android:text="Player Name (Bowler)"
+        android:layout_toLeftOf="@+id/cb"
+        android:layout_toRightOf="@+id/rl_profile"
+        android:textColor="@color/black"
+        android:textSize="@dimen/_12sdp"
+        app:fontFamily="@font/opensans_semibold" />
+
+    <CheckBox
+        android:id="@+id/cb"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="16sp"
-        android:text="Player Name"
-        android:textColor="@android:color/black"
-        android:layout_weight="1"/>
+        android:layout_alignParentEnd="true"
+        android:enabled="false"
+        android:layout_centerVertical="true"
+        android:visibility="gone">
 
-</LinearLayout>
+    </CheckBox>
+
+
+</RelativeLayout>
+
+</com.google.android.material.card.MaterialCardView>
+
+    <!--
+    <RelativeLayout
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_marginStart="@dimen/_3sdp">
+    <TextView
+        android:id="@+id/tvTName"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Team Name"
+        android:layout_centerVertical="true"
+        android:layout_marginEnd="@dimen/_2sdp"
+        android:layout_toLeftOf="@+id/mb_add_player"
+        android:textColor="@color/black"
+        android:textSize="@dimen/_10sdp"
+        app:fontFamily="@font/opensans_semibold" />
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/mb_add_player"
+        style="@style/Widget.MaterialComponents.Button"
+        android:layout_height="@dimen/_25sdp"
+        android:layout_width="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_centerVertical="true"
+        app:cornerRadius="@dimen/_50sdp"
+        android:layout_gravity="center_horizontal"
+        android:textColor="@color/white"
+        android:text="@string/add_team"
+        android:fontFamily="@font/opensans_bold"
+        android:textSize="@dimen/_8sdp"
+        android:backgroundTint="@color/purple_500"
+        />
+    </RelativeLayout>-->
+
+
