--- a/app/src/main/res/layout/dialog_end_match.xml
+++ b/app/src/main/res/layout/dialog_end_match.xml
@@ -206,9 +206,8 @@
                 android:orientation="horizontal">
                 <TextView
                     android:id="@+id/tvWinningTeamRun"
-                    android:layout_width="0dp"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1.5"
                     android:text="21"
                     android:layout_marginEnd="@dimen/_10sdp"
                     android:fontFamily="@font/opensans_regular"
