--- a/app/src/main/res/layout/item_player.xml
+++ b/app/src/main/res/layout/item_player.xml
@@ -40,80 +40,37 @@ tools:ignore="NamespaceTypo">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/_10sdp"
-        android:layout_toLeftOf="@+id/cb"
         android:layout_toRightOf="@+id/rl_profile"
-        android:orientation="vertical">
-
-
-
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/_3sdp"
-            android:orientation="horizontal">
-
-            <TextView
-                android:id="@+id/tvtLocation"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentStart="true"
-                android:visibility="gone"
-                android:layout_gravity="center_vertical"
-                android:drawableLeft="@drawable/call_black_18dp"
-                android:drawablePadding="@dimen/_2sdp"
-                android:text="8799736451"
-                android:textColor="@color/black"
-                android:textSize="@dimen/_8sdp"
-                app:fontFamily="@font/opensans_regular" />
-
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentEnd="true"
-                android:orientation="vertical"
-                android:visibility="gone">
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_vertical"
-                    android:text="Assigned role:-"
-                    android:textColor="@color/black"
-                    android:textSize="@dimen/_8sdp"
-                    app:fontFamily="@font/opensans_regular" />
-
-                <TextView
-                    android:id="@+id/tvtRole"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="end"
-                    android:gravity="end"
-                    android:text="Captain"
-                    android:textColor="@color/purple_700"
-                    android:textSize="@dimen/_8sdp"
-                    app:fontFamily="@font/opensans_regular" />
-
-            </LinearLayout>
-        </RelativeLayout>
-
-    </LinearLayout>
-
-    <TextView
-        android:id="@+id/tvPlayerName"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:layout_centerVertical="true"
         android:layout_marginEnd="@dimen/_2sdp"
         android:paddingStart="@dimen/_2sdp"
         android:layout_marginStart="@dimen/_5sdp"
-        android:text="Player Name (Bowler)"
-        android:layout_toLeftOf="@+id/cb"
-        android:layout_toRightOf="@+id/rl_profile"
-        android:textColor="@color/black"
-        android:textSize="@dimen/_12sdp"
-        app:fontFamily="@font/opensans_semibold" />
+        android:orientation="vertical">
+        <TextView
+            android:id="@+id/tvPlayerName"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:layout_centerVertical="true"
+            android:text="Player Name (Bowler)"
+            android:layout_toLeftOf="@+id/cb"
+            android:textColor="@color/black"
+            android:textSize="@dimen/_12sdp"
+            app:fontFamily="@font/opensans_semibold" />
+        <TextView
+            android:id="@+id/tvStatus"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:layout_centerVertical="true"
+            android:text="Player Name (Bowler)"
+            android:layout_toLeftOf="@+id/cb"
+            android:textColor="@color/light_red"
+            android:layout_marginTop="@dimen/_5sdp"
+            android:textSize="@dimen/_12sdp"
+            android:visibility="gone"
+            app:fontFamily="@font/opensans_semibold" />
+    </LinearLayout>
+
 
     <CheckBox
         android:id="@+id/cb"
