--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -15,6 +15,8 @@
     <color name="dark_grey">#A9A9A9</color>
     <color name="light_gray">#F8F7FB</color>
     <color name="platinum_gray"> #E5E4E2</color>
+    <color name="platinum_grayy"> #C6C6C6</color>
+
 
 
     <color name="lightgrey_dim">#EBEAEC</color>
