--- a/app/src/main/res/layout/dialog_wide_ball.xml
+++ b/app/src/main/res/layout/dialog_wide_ball.xml
@@ -1,50 +1,51 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@color/white"
+    android:orientation="vertical"
     android:padding="20dp">
 
-    <Button
-        android:id="@+id/btn_wd_0"
-        android:text="WD + 0"
+    <GridLayout
+        android:id="@+id/gridLegByeOptions"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"
+        android:columnCount="4"
+        android:padding="8dp">
 
-    <Button
-        android:id="@+id/btn_wd_1"
-        android:text="WD + 1"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        <Button
+            android:id="@+id/btn_wd_0"
+            style="@style/LegByeButtonStyle"
+            android:text="WD + 0" />
 
-    <Button
-        android:id="@+id/btn_wd_2"
-        android:text="WD + 2"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        <Button
+            android:id="@+id/btn_wd_1"
+            style="@style/LegByeButtonStyle"
+            android:text="WD + 1" />
 
-    <Button
-        android:id="@+id/btn_wd_3"
-        android:text="WD + 3"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        <Button
+            android:id="@+id/btn_wd_2"
+            style="@style/LegByeButtonStyle"
+            android:text="WD + 2" />
 
-    <Button
-        android:id="@+id/btn_wd_4"
-        android:text="WD + 4"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        <Button
+            android:id="@+id/btn_wd_3"
+            style="@style/LegByeButtonStyle"
+            android:text="WD + 3" />
 
-    <Button
-        android:id="@+id/btn_wd_5"
-        android:text="WD + 5"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        <Button
+            android:id="@+id/btn_wd_4"
+            style="@style/LegByeButtonStyle"
+            android:text="WD + 4" />
 
-    <Button
-        android:id="@+id/btn_wd_6"
-        android:text="WD + 6"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        <Button
+            android:id="@+id/btn_wd_5"
+            style="@style/LegByeButtonStyle"
+            android:text="WD + 5" />
+
+        <Button
+            android:id="@+id/btn_wd_6"
+            style="@style/LegByeButtonStyle"
+            android:text="WD + 6" />
+    </GridLayout>
 </LinearLayout>
