--- a/app/src/main/res/layout/item_player.xml
+++ b/app/src/main/res/layout/item_player.xml
@@ -30,7 +30,7 @@ tools:ignore="NamespaceTypo">
             android:id="@+id/image"
             android:layout_width="@dimen/_45sdp"
             android:layout_height="@dimen/_45sdp"
-            android:src="@drawable/placeholder_user"
+            android:src="@drawable/profile_avtar"
             app:civ_border_width="@dimen/_4sdp"
             tools:ignore="ImageContrastCheck" />
 
@@ -41,6 +41,7 @@ tools:ignore="NamespaceTypo">
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_toRightOf="@+id/rl_profile"
+        android:layout_centerVertical="true"
         android:layout_marginEnd="@dimen/_2sdp"
         android:paddingStart="@dimen/_2sdp"
         android:layout_marginStart="@dimen/_5sdp"
@@ -65,7 +66,7 @@ tools:ignore="NamespaceTypo">
             android:text="Player Name (Bowler)"
             android:layout_toLeftOf="@+id/cb"
             android:textColor="@color/light_red"
-            android:layout_marginTop="@dimen/_5sdp"
+            android:layout_marginTop="@dimen/_2sdp"
             android:textSize="@dimen/_12sdp"
             android:visibility="gone"
             app:fontFamily="@font/opensans_semibold" />
