--- a/app/src/main/res/layout/activity_scoring_dash_bord.xml
+++ b/app/src/main/res/layout/activity_scoring_dash_bord.xml
@@ -406,7 +406,8 @@
                 android:layout_below="@+id/scoringGrid"
                 android:text="OUT"
                 android:backgroundTint="@null"
-                android:textSize="18dp"
+                android:textSize="@dimen/_14sdp"
+                android:fontFamily="@font/opensans_semibold"
                 android:background="@drawable/item_border_gray"
                 android:textColor="#800000"/>
         </LinearLayout>
