--- a/app/src/main/res/values/style.xml
+++ b/app/src/main/res/values/style.xml
@@ -34,7 +34,8 @@
         <item name="android:background">@drawable/item_border</item>
         <item name="android:backgroundTint">@null</item>
         <item name="android:textColor">#696969</item>
-        <item name="android:textSize">18sp</item>
+        <item name="android:fontFamily">@font/opensans_semibold</item>
+        <item name="android:textSize">@dimen/_14sdp</item>
     </style>
 
     <style name="ScoreButtonStyleGray">
@@ -45,18 +46,21 @@
         <item name="android:background">@drawable/item_border_gray</item>
         <item name="android:backgroundTint">@null</item>
         <item name="android:textColor">#696969</item>
-        <item name="android:textSize">18sp</item>
+        <item name="android:fontFamily">@font/opensans_semibold</item>
+        <item name="android:textSize">@dimen/_14sdp</item>
     </style>
     <!-- Button Style for No Ball Options -->
     <style name="NoBallButtonStyle">
-        <item name="android:layout_width">100dp</item>
-        <item name="android:layout_height">50dp</item>
+        <item name="android:background">@drawable/green_button_border</item>
+        <item name="android:layout_width">60dp</item>
+        <item name="android:layout_height">40dp</item>
         <!--        //<item name="android:margin">4dp</item>-->
     </style>
 
     <style name="LegByeButtonStyle">
-        <item name="android:layout_width">80dp</item>
-        <item name="android:layout_height">50dp</item>
+        <item name="android:background">@drawable/green_button_border</item>
+        <item name="android:layout_width">60dp</item>
+        <item name="android:layout_height">40dp</item>
         <!-- <item name="android:margin">8dp</item>-->
     </style>
 
